force-app/main/default/objects/Fixed_Quote__c/Fixed_Quote__c.object-meta.xml
<CustomObject>
    <label>Fixed Quote</label>
    <nameField>
        <displayFormat>FPQ-{0}</displayFormat>
        <label>FPQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixed Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>