force-app/main/default/objects/Fixed_Quote__c/fields/Accept_Change_Warning__c.field-meta.xml
<CustomField>
    <fullName>Accept_Change_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checking this box allows term changes and provides user&#39;s acceptance of the effects of the change</description>
    <inlineHelpText>checking this box allows term changes and provides user&#39;s acceptance of the effects of the change</inlineHelpText>
    <label>Accept Change Warning</label>
    <type>Checkbox</type>
</CustomField>