force-app/main/default/objects/Fixed_Quote__c/fields/CES_Margin__c.field-meta.xml
<CustomField>
    <fullName>CES_Margin__c</fullName>
    <label>CES Margin</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>