force-app/main/default/objects/Fixed_Quote__c/fields/CES_Office__c.field-meta.xml
<CustomField>
    <fullName>CES_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fixed Quotes (CES Office)</relationshipLabel>
    <relationshipName>Fixed_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>