force-app/main/default/objects/Fixed_Quote__c/fields/Consultant_Margin__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Margin__c</fullName>
    <label>Consultant Margin</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>