force-app/main/default/objects/Fixed_Quote__c/fields/Contract_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Creation_Date__c</fullName>
    <label>Contract Creation Date</label>
    <type>DateTime</type>
</CustomField>