force-app/main/default/objects/Fixed_Quote__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>