force-app/main/default/objects/Fixed_Quote__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Fixed Quotes</relationshipLabel>
    <relationshipName>Fixed_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>