force-app/main/default/objects/Fixed_Quote__c/fields/Last_Notification_Price_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Price_Check__c</fullName>
    <label>Last Notification Price Check</label>
    <type>DateTime</type>
</CustomField>