force-app/main/default/objects/Fixed_Quote__c/fields/Load_Curve__c.field-meta.xml
<CustomField>
    <fullName>Load_Curve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load Curve</label>
    <referenceTo>Load_Curve__c</referenceTo>
    <relationshipLabel>Fixed Quotes</relationshipLabel>
    <relationshipName>Fixed_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>