force-app/main/default/objects/Fixed_Quote__c/fields/Lock_Method__c.field-meta.xml
<CustomField>
    <fullName>Lock_Method__c</fullName>
    <label>Lock Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>WACOG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>