force-app/main/default/objects/Fixed_Quote__c/fields/Lock_Type__c.field-meta.xml
<CustomField>
    <fullName>Lock_Type__c</fullName>
    <label>Lock Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lock Citygate</fullName>
            </value>
            <value>
                <fullName>Lock Basis</fullName>
            </value>
            <value>
                <fullName>Lock NYMEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>