force-app/main/default/objects/Fixed_Quote__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>