force-app/main/default/objects/Fixed_Quote__c/fields/Notifications_On__c.field-meta.xml
<CustomField>
    <fullName>Notifications_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notifications On</label>
    <type>Checkbox</type>
</CustomField>