force-app/main/default/objects/Fixed_Quote__c/fields/Notify_below__c.field-meta.xml
<CustomField>
    <fullName>Notify_below__c</fullName>
    <label>Notify below</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>