force-app/main/default/objects/Fixed_Quote__c/fields/PositionXML__c.field-meta.xml
<CustomField>
    <fullName>PositionXML__c</fullName>
    <label>PositionXML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>