force-app/main/default/objects/Fixed_Quote__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>