force-app/main/default/objects/Fixed_Quote__c/fields/Price_at_Last_Check__c.field-meta.xml
<CustomField>
    <fullName>Price_at_Last_Check__c</fullName>
    <label>Price at Last Check</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>