force-app/main/default/objects/Fixed_Quote__c/fields/Pricing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Scenario</label>
    <referenceTo>Pipeline_Scenario__c</referenceTo>
    <relationshipLabel>Fixed Quotes</relationshipLabel>
    <relationshipName>Fixed_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>