force-app/main/default/objects/Fixed_Quote__c/fields/Quote_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Execution_Date__c</fullName>
    <label>Quote Execution Date</label>
    <type>DateTime</type>
</CustomField>