force-app/main/default/objects/Fixed_Quote__c/fields/QuoteDetails__c.field-meta.xml
<CustomField>
    <fullName>QuoteDetails__c</fullName>
    <description>json version of quote</description>
    <inlineHelpText>json version of quote</inlineHelpText>
    <label>QuoteDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>