force-app/main/default/objects/Fixed_Quote__c/fields/Required_Volume_Method__c.field-meta.xml
<CustomField>
    <fullName>Required_Volume_Method__c</fullName>
    <label>Required Volume Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weather Normalized</fullName>
            </value>
            <value>
                <fullName>Historical Average</fullName>
            </value>
            <value>
                <fullName>Last 12 Months Actuals</fullName>
            </value>
            <value>
                <fullName>Load Curve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>