force-app/main/default/objects/Fixed_Quote__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Opportunity__r.Opportunity_Owner_Name__c</formula>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>