force-app/main/default/objects/Fixed_Quote__c/fields/Storage_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Storage_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Strategy</label>
    <referenceTo>Storage_Strategy__c</referenceTo>
    <relationshipLabel>Fixed Quotes</relationshipLabel>
    <relationshipName>Fixed_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>