force-app/main/default/objects/Fixed_Quote__c/fields/Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this needs to be checked to allow approval process to be started</description>
    <inlineHelpText>this needs to be checked to allow approval process to be started</inlineHelpText>
    <label>Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>