force-app/main/default/objects/Fixed_Quote__c/fields/Target_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Target_Percentage__c</fullName>
    <label>Target Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>