force-app/main/default/objects/Fixed_Quote__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <formula>Opportunity__r.LDC2__r.Name</formula>
    <label>Utility</label>
    <type>Text</type>
</CustomField>