force-app/main/default/objects/Fixed_Quote__c/fields/Utility_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Utility_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Lookup</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Fixed Quotes</relationshipLabel>
    <relationshipName>Fixed_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>