force-app/main/default/objects/Fixed_Quote__c/fields/view_edit_quote__c.field-meta.xml
<CustomField>
    <fullName>view_edit_quote__c</fullName>
    <formula>HYPERLINK(&quot;/apex/fixedpricequote?quote=&quot;&amp;Id, &quot;View Quote&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>view/edit quote</label>
    <type>Text</type>
</CustomField>