force-app/main/default/objects/Fixed_Quote__c/fields/Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Volume_Type__c</fullName>
    <label>Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>