force-app/main/default/objects/Fixed_Quote__c/fields/WACOG_Position_JSON__c.field-meta.xml
<CustomField>
    <fullName>WACOG_Position_JSON__c</fullName>
    <label>WACOG Position JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>